--- a/foundryconfig.json
+++ b/foundryconfig.json
@@ -1,5 +1,5 @@
 {
-    "moduleName": "Lazrius' FoundryVTT Template",
-    "repository": "https://github.com/Lazrius/FoundryVTT-Typescript-Module-Template",
-    "rawURL": "https://raw.githubusercontent.com/Lazrius/FoundryVTT-Typescript-Module-Template"
+    "moduleName": "loremaster",
+    "repository": "https://github.com/OIiver-D/loremaster",
+    "rawURL": "https://raw.githubusercontent.com/OIiver-D/loremaster"
 }
