--- a/foundryconfig.json
+++ b/foundryconfig.json
@@ -1,5 +1,5 @@
 {
-    "moduleName": "loremaster",
-    "repository": "https://github.com/OIiver-D/loremaster",
-    "rawURL": "https://raw.githubusercontent.com/OIiver-D/loremaster"
+    "moduleName": "docent",
+    "repository": "https://github.com/OIiver-D/docent",
+    "rawURL": "https://raw.githubusercontent.com/OIiver-D/docent"
 }
