--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
 	"plugin:@typescript-eslint/eslint-recommended",
 	"plugin:@typescript-eslint/recommended"
   ],
+  "browser": true,
   "rules": {
 	"@typescript-eslint/no-useless-constructor": "off",
 	"@typescript-eslint/no-empty-function": "off",
