--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/fs-extra": "^9.0.13",
 		"@types/gulp": "^4.0.9",
 		"@types/gulp-less": "^0.0.32",
+		"@types/html-to-text": "^9.0.4",
 		"@types/jquery": "^3.5.6",
 		"@types/node": "^16.9.1",
 		"@types/yargs": "^17.0.2",
@@ -50,6 +51,7 @@
 		"yargs": "^17.1.1"
 	},
 	"dependencies": {
-		"discord.js": "^14.15.3"
+		"discord.js": "^14.15.3",
+		"html-to-text": "^9.0.5"
 	}
 }
