--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,7 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
-    "types": ["@league-of-foundry-developers/foundry-vtt-types", 
-              "@league-of-foundry-developers/foundry-vtt-dnd5e-types" 
-              ],                                      /* Specify type package names to be included without being referenced in a source file. */
+    "types": ["@league-of-foundry-developers/foundry-vtt-types"],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     "resolveJsonModule": true,                        /* Enable importing .json files */
     // "noResolve": true,                                /* Disallow `import`s, `require`s or `<reference>`s from expanding the number of files TypeScript should add to a project. */
@@ -95,7 +93,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   //"include": [
-  //  "./Source/**/*.ts"
+  //  "./src/**/*.ts"
   //]
   "exclude": ["gulpfile.ts"]
 }
